ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
    - http:
        paths:
          - path: /todo_list
            backend:
              serviceName: sample-app
              servicePort: 6000
          - path: /
            backend:
              serviceName: sample-project
              servicePort: 6000
